textpattern.css
/* ... */
/* Opera hack */
.opera:-o-prefocus,
.txp-layout-grid {
	word-spacing: -0.43em;
}

.txp-layout-grid > div {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	padding: 0 1em;
	/* reset text defaults */
	letter-spacing: normal;
	word-spacing: normal;
	text-rendering: auto;
}

/* layout grid cells - no explicit width by default, apply `.txp-layout-x-y` classes below */
.txp-layout-cell {
	display: inline-block;
	margin: 0;
	width: 100%;
	/* controls vertical positioning of units */
	vertical-align: top;
	/* keeps unit content correctly aligned */
	text-align: left;
}

/* reset vertical margin on nested layout grids */
.txp-layout-grid .txp-layout-grid .grid__cell {
	margin-top: -1em;
}

/* proportional layout cells */
.txp-layout-1-4 {
	width: 25%;
}

.txp-layout-2-4 {
	width: 50%;
}

.txp-layout-3-4 {
	width: 75%;
}

/* text columns (fixed proportion cell) */
.txp-layout-textbox {
	margin: 0 auto;
	max-width: 58em;
}

.txp-layout-grid > div.txp-layout-textbox {
	padding: 0;
}

/* Deprecated @ 4.6 - use .txp-layout-textbox instead */
.text-column {
	margin: 0 auto;
	max-width: 58em;
}


/* Links
   ========================================================================== */

a {
	color: #963;
	text-decoration: none;
}

a:focus {
	outline: thin dotted #0066ff;
}

a:hover {
	text-decoration: underline;
}

a:hover,
a:active {
	outline: 0;
}

a.busy {
	visibility: hidden;
}

a.pophelp,
a.pophelpsubtle {
	border: 1px solid;
	border-color: #ddd #bbb #bbb #ddd;
	-moz-border-radius: 50%;
	border-radius: 50%;
	padding: 0 2px;
	font-weight: normal;
	background-color: #f5f5f5;
}

h3 a {
	font-weight: bold;
}


/* Typography
   ========================================================================== */

body,
input,
textarea,
select,
button {
	font-size: 12px;
	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
	line-height: 1.5;
}

h1,
h2,
h3 {
	font-family: Cambria, Georgia, serif;
	font-weight: normal;
}

h1 {
	font-size: 2em; /* 24px / 12px */
	line-height: 1.25;
	margin: 0 0 0.5em 0;
}

h1 .pophelp {
	font-size: 0.5em;
}

h2 {
	font-size: 1.5em; /* 18px / 12px */
	line-height: 1.33333;
	margin: 0 0 0.66667em 0;
}

h2 .pophelp {
	font-size: 0.66667em;
}

h3 {
	font-size: 1.25em; /* 15px / 12px */
	line-height: 1.4;
	margin: 0 0 0.8em 0;
}

.txp-grid-cell h3 {
	margin-top: 0.8em;
}

/* addresses style set to 'bolder' in Firefox4+, Safari5, and Chrome */
b,
strong {
	font-weight: bold;
}

address {
	margin: 1em 0;
}

blockquote {
	margin: 1em 0;
	border-left: 3px solid #cccccc;
	padding: 0 0 0 1em;
}

/* sets consistent quote types */
q {
	quotes: "\201C" "\201D" "\2018" "\2019";
}

/* addresses styling not present in Safari5 and Chrome */
dfn {
	font-style: italic;
}

/* addresses styling not present in IE8-9, Safari5, Chrome */
abbr[title],
dfn[title] {
	border-bottom: 1px dotted;
	cursor: help;
}

mark,
var {
	background-color: #ffc;
}

pre,
code,
kbd,
samp,
.code {
	font-family: Monaco, "Lucida Console", "Bitstream Vera Sans Mono", "DejaVu Sans Mono", monospace;
}

code,
kbd,
samp {
	border: 1px solid #e5e5e5;
	padding: 0 0.2em;
	background: #f5f5f5;
}

pre {
	border: 1px solid #e5e5e5;
	padding: 1em;
	background: #f5f5f5;
	tab-size: 4; /* set tab size to 4 spaces */
	overflow-x: auto;
}

code,
.code {
	direction: ltr;
}

pre code,
.code code,
code.body,
code.excerpt {
	border: 0;
	background-color: transparent;
}

/* prevents sub and sup affecting line-height in all browsers */
sub,
sup {
	font-size: 0.83333em; /* 10px / 12px */
	line-height: 0;
	position: relative;
	vertical-align: baseline;
}

sup {
	top: -0.5em;
}

sub {
	bottom: -0.25em;
}

small,
figcaption {
	font-size: 0.83333em; /* 10px / 12px */
}


/* Support for non-latin languages
   ========================================================================== */

html[lang="ja-jp"] {
	font-family: "Hiragino Kaku Gothic Pro", Meiryo, sans-serif;
}

html[lang="ko-kr"] {
	font-family: GulimChe, Gulim, sans-serif;
}

html[lang="zh-cn"] {
	font-family: SimHei, sans-serif;
}

html[lang="zh-tw"] {
	font-family: PMingLiU, sans-serif;
}


/* Embedded content
   ========================================================================== */

/* removes border when inside 'a' element in IE8-9 */
img {
	border: 0;
}

img.align-left {
	float: left;
	margin: 1em 1em 1em 0;
}

img.align-right {
	float: right;
	margin: 1em 0 1em 1em;
}

img.align-center {
	display: block;
	margin: 1em auto;
}

/* addresses margin not present in IE 8-9 and Safari 5 */
figure {
	margin: 0;
}

/* corrects overflow displayed oddly in IE9 */
svg:not(:root) {
	overflow: hidden;
}

.content-image {
	border: solid 1px #cccccc;
	padding: 4px;
	background: #fff;
}

a:hover .content-image {
	border: solid 1px #963;
}


/* Messages
   ========================================================================== */

/* label colours */

.success {
	color: #008000;
}

.warning {
	color: #cb8f02;
}

.error {
	color: #c40000;
}

.information {
	color: #3a87ad;
}

.highlight {
	background-color: #fff8dd;
}

.alert-block {
	margin: 0 auto 1em auto;
	padding: 0.5em 1em;
}

.alert-block.success {
	border: 1px solid #a3d48e;
	background: #dff0d8;
}

.alert-block.warning {
	border: 1px solid #ffe16d;
	background: #fff6d3;
}

.alert-block.error {
	border: 1px solid #e1b2b2;
	background: #f2dede;
}

.alert-block.information {
	border: 1px solid #b1e2f5;
	background: #e7f6fc;
}

/* alert boxes */

#messagepane {
	position: fixed;
	bottom: 0;
	right: 0;
	left: 0;
	z-index: 1000;
}

#messagepane span {
	position: relative;
	display: block;
	padding: 0.5em 2em;
	color: #fff;
	text-align: center;
	-webkit-box-shadow: 0 -0.25em 0.4em rgba(0, 0, 0, 0.15);
	-moz-box-shadow: 0 -0.25em 0.4em rgba(0, 0, 0, 0.15);
	box-shadow: 0 -0.25em 0.4em rgba(0, 0, 0, 0.15);
}

#messagepane span.success {
	background: #008000;
}

#messagepane span.warning {
	background: #cb8f02;
}

#messagepane span.error {
	background: #c40000;
}
/* ... */

